--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "tailwindcss-plugins": "^0.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vue-select": "^3.1.0"
     }
 }
