add custom fields!!!!

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/tinker": "^1.0",
         "league/oauth2-client": "^2.4",
         "predis/predis": "^1.1",
+        "spatie/enum": "^2.3",
+        "spatie/laravel-enum": "^1.0@beta",
         "spatie/laravel-translatable": "^4.1"
     },
     "require-dev": {
