--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-select": "^3.1.0"
+        "vue-select": "^3.1.0",
+        "vuex": "^3.1.1"
     }
 }
