--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "doctrine/dbal": "^2.9",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
+        "filp/whoops": "^2.5",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
