--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
         run: |
           mkdir -p database
           touch database/database.sqlite
-          php artisan migrate --seed
+          php artisan migrate:fresh --seed --force
       - name: Run PHPUnit
         run: vendor/bin/phpunit
