--- a/.env.ci
+++ b/.env.ci
@@ -4,8 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-DB_CONNECTION=sqlite
-DB_DATABASE=database/database.sqlite
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=rulla
+DB_USERNAME=rulla
+DB_PASSWORD=rulla
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
