--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,11 @@ jobs:
   laravel-tests:
     runs-on: ubuntu-latest
     steps:
+      - uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql database: 'rulla'
+          mysql user: 'rulla'
+          mysql password: 'rulla'
       - uses: actions/checkout@v1
       - name: Create .env
         run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
@@ -11,10 +16,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
         run: php artisan key:generate
-      - name: Create DB and schemas
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
-          php artisan migrate:fresh --seed --force
+      - name: Migrate DB
+        run: php artisan migrate:fresh --seed --force
       - name: Run PHPUnit
         run: vendor/bin/phpunit
