--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,15 @@ on: [push]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    services:
+      image: mariadb
+      restart: always
+      environment:
+        MYSQL_ROOT_PASSWORD: rulla
+        MYSQL_DATABASE: rulla
+      ports:
+        - 13306:3306
     steps:
-      - uses: mirromutth/mysql-action@v1.1
-        with:
-          mysql database: 'rulla'
-          mysql user: 'rulla'
-          mysql password: 'rulla'
       - uses: actions/checkout@v1
       - name: Create .env
         run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
