--- a/.env.ci
+++ b/.env.ci
@@ -8,7 +8,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=rulla
-DB_USERNAME=rulla
+DB_USERNAME=root
 DB_PASSWORD=rulla
 
 BROADCAST_DRIVER=log
