--- a/.env.ci
+++ b/.env.ci
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rulla
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=rulla
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
