--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,34 @@ jobs:
   laravel-tests:
     runs-on: ubuntu-latest
     services:
-      image: mariadb
-      restart: always
-      env:
-        MYSQL_ROOT_PASSWORD: rulla
-        MYSQL_DATABASE: rulla
-      ports:
-        - 13306:3306
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: false
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: laravel
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v1
-      - name: Create .env
-        run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
-      - name: Install composer depencencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Migrate DB
-        run: php artisan migrate:fresh --seed --force
+      - name: Install Composer dependencies
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+      - name: Prepare the application
+        run: |
+          cp .env.example .env
+          php artisan key:generate
+      - name: Clear Config
+        run: php${{ matrix.php }} artisan config:clear
+      - name: Verify MySQL connection from host
+        run: mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -ppassword -e "SHOW DATABASES"
+      - name: Run Migration
+        run: |
+          echo ${DB_PASSWORD}
+          php${{ matrix.php }} artisan migrate -v
+        env:
+          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
       - name: Run PHPUnit
         run: vendor/bin/phpunit
+        env:
+          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
