--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
       - name: Prepare the application
         run: |
-          cp .env.example .env
+          cp .env.ci .env
           php artisan key:generate
       - name: Clear Config
         run: php${{ matrix.php }} artisan config:clear
@@ -28,7 +28,7 @@ jobs:
       - name: Run Migration
         run: |
           echo ${DB_PASSWORD}
-          php${{ matrix.php }} artisan migrate -v
+          php${{ matrix.php }} artisan migrate -v --force --seed
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
       - name: Run PHPUnit
