--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Composer dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+      - name: Install NPM dependencies
+        run: npm install
       - name: Prepare the application
         run: |
           cp .env.ci .env
@@ -31,6 +33,8 @@ jobs:
           php${{ matrix.php }} artisan migrate -v --force --seed
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+      - name: Build assets
+        run: npm run production
       - name: Run PHPUnit
         run: vendor/bin/phpunit
         env:
