--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "is-number": "^7.0.0",
+        "vue-ctk-date-time-picker": "^2.3.0",
         "vue-select": "^3.1.0",
         "vuex": "^3.1.1"
     }
