--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         "adldap2/adldap2": "^10.1",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
         "league/oauth2-client": "^2.4",
         "predis/predis": "^1.1",
         "spatie/enum": "^2.3",
         "spatie/laravel-blade-javascript": "^2.4",
-        "spatie/laravel-enum": "^1.0@beta",
+        "spatie/laravel-enum": "^1.0",
         "spatie/laravel-translatable": "^4.1"
     },
     "require-dev": {
@@ -27,12 +27,12 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "doctrine/dbal": "^2.9",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "wnx/laravel-stats": "^2.0"
+        "nunomaduro/collision": "^4.0",
+        "phpunit/phpunit": "^9.1",
+        "wnx/laravel-stats": "^2.2"
     },
     "config": {
         "optimize-autoloader": true,
