--- a/package.json
+++ b/package.json
@@ -10,28 +10,26 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
-        "laravel-mix-purgecss": "^2.2.0",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "cross-env": "^5.2.1",
+        "is-number": "^7.0.0",
+        "laravel-mix": "^4.1.4",
+        "laravel-mix-purgecss": "^5.0.0",
         "lodash": "^4.17.5",
         "postcss-import": "^11.1.0",
         "postcss-nesting": "^5.0.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "resolve-url-loader": "^2.3.2",
+        "sass": "^1.26.5",
+        "sass-loader": "^7.3.1",
         "tailwind-forms": "^1.0.6",
-        "tailwindcss": "^1.0.6",
+        "tailwindcss": "^1.4.4",
         "tailwindcss-plugins": "^0.3.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "dependencies": {
-        "is-number": "^7.0.0",
-        "vue-ctk-date-time-picker": "^2.3.0",
-        "vue-select": "^3.1.0",
-        "vuex": "^3.1.1"
+        "vue": "^2.6.11",
+        "vue-ctk-date-time-picker": "^2.4.0",
+        "vue-select": "^3.10.3",
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.3.0"
     }
 }
